<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <name>jamal-parent</name>
    <packaging>pom</packaging>
    <groupId>com.javax0.jamal</groupId>
    <artifactId>jamal-parent</artifactId>
    <version>1.7.0</version>
    <description>Jamal macro library to process text files</description>
    <modules>
        <module>jamal-engine</module>
        <module>jamal-api</module>
        <module>jamal-tools</module>
        <module>jamal-core</module>
        <module>jamal-extensions</module>
        <module>jamal-maven-plugin</module>
        <module>jamal-testsupport</module>
        <module>jamal-cmd</module>
        <module>jamal-snippet</module>
        <module>jamal-test</module>
        <module>jamal-scriptbasic</module>
        <module>jamal-plantuml</module>
    </modules>
    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>
    <developers>
        <developer>
            <name>Peter Verhas</name>
            <email>peter@verhas.com</email>
        </developer>
    </developers>
    <scm>
        <connection>scm:git:git://github.com/verhas/jamal.git</connection>
        <developerConnection>scm:git:ssh://github.com/verhas/jamal.git</developerConnection>
        <url>https:/github.com/verhas/jamal/tree/master</url>
    </scm>
    <url>https:/github.com/verhas/jamal/tree/master</url>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>
    <build>
        <plugins>
            <plugin>
                <groupId>org.sonatype.plugins</groupId>
                <artifactId>nexus-staging-maven-plugin</artifactId>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>3.0.1</version>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>3.2.0</version>
                    <configuration>
                        <detectOfflineLinks>false</detectOfflineLinks>
                    </configuration>
                    <executions>
                        <execution>
                            <id>attach-javadocs</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                    <configuration>
                        <source>13</source>
                        <target>11</target>
                        <release>11</release>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.0.0-M4</version>
                    <configuration>
                        <argLine>
                                    --add-opens jamal.tools/javax0.jamal.tools=ALL-UNNAMED
                                    --add-opens jamal.engine/javax0.jamal=ALL-UNNAMED
                                    --add-opens jamal.api/javax0.jamal.api=ALL-UNNAMED
                                    --add-opens jamal.plantuml/javax0.jamal.plantuml=ALL-UNNAMED
                                    --add-opens jamal.plantuml/javax0.jamal.documentation=ALL-UNNAMED
                                    --add-opens jamal.test/javax0.jamal.test.extra=ALL-UNNAMED
                                    --add-opens jamal.test/javax0.jamal.test.core=ALL-UNNAMED
                                    --add-opens jamal.test/javax0.jamal.test.examples=ALL-UNNAMED
                                    --add-opens jamal.engine/javax0.jamal.engine=ALL-UNNAMED
                                    --add-opens jamal.engine/javax0.jamal.engine.util=ALL-UNNAMED
                                    --add-opens jamal.testsupport/javax0.jamal.builtinstest=ALL-UNNAMED
                                    --add-opens jamal.testsupport/javax0.jamal.testsupport=ALL-UNNAMED
                                    --add-opens jamal.extensions/javax0.jamal.extensions=ALL-UNNAMED
                                    --add-opens jamal.snippet/javax0.jamal.snippet=ALL-UNNAMED
                                    --add-opens jamal.snippet/javax0.jamal.documentation=ALL-UNNAMED
                                    --add-opens jamal.scriptbasic/javax0.jamal.scriptbasic=ALL-UNNAMED
                                </argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.sonatype.plugins</groupId>
                    <artifactId>nexus-staging-maven-plugin</artifactId>
                    <version>1.6.7</version>
                    <extensions>true</extensions>
                    <configuration>
                        <serverId>ossrh</serverId>
                        <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                        <autoReleaseAfterClose>true</autoReleaseAfterClose>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.javax0.jamal</groupId>
                <artifactId>jamal-testsupport</artifactId>
                <version>1.7.0</version>
            </dependency>
            <dependency>
                <groupId>com.javax0.jamal</groupId>
                <artifactId>jamal-api</artifactId>
                <version>1.7.0</version>
            </dependency>
            <dependency>
                <groupId>com.javax0.jamal</groupId>
                <artifactId>jamal-core</artifactId>
                <version>1.7.0</version>
            </dependency>
            <dependency>
                <groupId>com.javax0.jamal</groupId>
                <artifactId>jamal-tools</artifactId>
                <version>1.7.0</version>
            </dependency>
            <dependency>
                <groupId>com.javax0.jamal</groupId>
                <artifactId>jamal-engine</artifactId>
                <version>1.7.0</version>
            </dependency>
            <dependency>
                <groupId>com.javax0.jamal</groupId>
                <artifactId>jamal-extensions</artifactId>
                <version>1.7.0</version>
            </dependency>
            <dependency>
                <groupId>com.javax0.jamal</groupId>
                <artifactId>jamal-scriptbasic</artifactId>
                <version>1.7.0</version>
            </dependency>
            <dependency>
                <groupId>com.javax0.jamal</groupId>
                <artifactId>jamal-snippet</artifactId>
                <version>1.7.0</version>
            </dependency>
            <dependency>
                <groupId>com.javax0.jamal</groupId>
                <artifactId>jamal-plantuml</artifactId>
                <version>1.7.0</version>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-api</artifactId>
                <version>5.2.0</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-engine</artifactId>
                <version>5.2.0</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-params</artifactId>
                <version>5.2.0</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <profiles>
        <profile>
            <id>release</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>1.6</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>